--- a/README
+++ b/README
@@ -1,1 +1,7 @@
 ### Rubinius debian package
+
+Donwload the last version:
+
+http://gastonramos.com.ar/rubinius/download/rubinius_0.9.0-1_i386.deb
+
+
