--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 ### Rubinius debian package
 
-Donwload the last version:
+Download the last version:
 
 http://gastonramos.com.ar/rubinius/download/rubinius_0.9.0-1_i386.deb
 
